feat: add stylish frontend (HTML/CSS/JS) + StudentController + validation